--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   db:
@@ -7,10 +7,12 @@ services:
     image: mysql/mysql-server:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: 'db'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_DATABASE: "db"
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "password"
+      MYSQL_ROOT_PASSWORD: "password"
+    ports:
+      - "3306:3306"
   node:
     networks:
       - db_net
@@ -19,6 +21,8 @@ services:
       - ./node:/app
     ports:
       - "3333:3333"
+    environment:
+      SEQUELIZE_CONNECT: "sequelize-settings.yml"
 networks:
   db_net:
     driver: bridge
