--- a/node/package.json
+++ b/node/package.json
@@ -7,7 +7,12 @@
     "start": "nodemon --experimental-modules ./server.mjs"
   },
   "dependencies": {
+    "debug": "^4.1.1",
+    "fs-extra": "^8.1.0",
+    "js-yaml": "^3.13.1",
+    "mysql2": "^2.0.0",
     "nodemon": "^1.19.4",
-    "restify": "^8.4.0"
+    "restify": "^8.4.0",
+    "sequelize": "^5.21.1"
   }
 }
