--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: mysql/mysql-server:5.7
     restart: always
     environment:
-      MYSQL_DATABASE: "db"
+      MYSQL_DATABASE: "note"
       MYSQL_USER: "user"
       MYSQL_PASSWORD: "password"
       MYSQL_ROOT_PASSWORD: "password"
